set up variables to work through, and now just need to add the functionality.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coding Quiz</title>
+</head>
+<body>
+    <div class="timerStatus">60</div>
+    <h1 id="quizHeader">Code Quiz</h1>
+    <h2 id="questions">What is a coding language used to alter HTML in live time based off of user input?</h2>
+    <li>
+    <ul><button class="btn" id="answer1">Spanish</button></ul>
+    <ul><button class="btn" id="answer2">Javascript</button></ul>
+    <ul><button class="btn" id="answer3">CSS</button></ul>
+    <ul><button class="btn" id="answer4">Italian</button></ul>
+    </li>
+</body>
+</html>
